Added markdown to notebook

--- a/prop-64-analysis.ipynb
+++ b/prop-64-analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prop 64 analysis\n",
+    "This is to learn some basic Python data analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
